tests/testcases/errors/BCE0141.boo
"""
BCE0141.boo(4,24): BCE0141: Duplicate parameter name 'dup' in 'method'.
"""
def method(dup as int, dup as string):
	print dup, dup
method(1, "snaffu!")